// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextBox renders with defaultProps 1`] = `
<div
  className="ax-context-box ax-context-box--padding-large"
>
  Lorem ipsum
</div>
`;

exports[`ContextBox renders with padding large 1`] = `
<div
  className="ax-context-box ax-context-box--padding-large"
>
  Lorem ipsum
</div>
`;

exports[`ContextBox renders with padding none 1`] = `
<div
  className="ax-context-box ax-context-box--padding-none"
>
  Lorem ipsum
</div>
`;

exports[`ContextBox renders with padding small 1`] = `
<div
  className="ax-context-box ax-context-box--padding-small"
>
  Lorem ipsum
</div>
`;
